--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body{
     align-items: center;
     gap: 1rem;
     cursor: pointer;
+    transition: background-color 300ms ease;
 }
 
 .card_content_cta-btn{
@@ -140,6 +141,10 @@ body{
     line-height: 23px;
     letter-spacing: 0.02em;
     cursor: pointer;
+}
+
+.card_content_cta:hover, .card_content_cta:active{
+    background-color: var(--hover-components-color);
 }
 
 @media only screen and (min-width: 601px) {
